# pydeezer

./: LICENSE  README.md
pydeezer/: pyproject.toml
pydeezer/pydeezer/: __init__.py  infos.py  ordering.py  request.py  utils.py
pydeezer/pydeezer/classes/: album.py  artist.py  episode.py  genre.py  model.py  podcast.py  radio.py  track.py
pydeezer/tests/: test.py
