[tool.poetry]
name = "pydeezer"
version = "0.1.0"
description = ""
authors = ["charlesl46 <charles.lucas4665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.scripts]
test = "tests.test:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
