[tool.poetry]
name = "pydeezer"
version = "0.1.0"
description = ""
authors = ["charlesl46 <charles.lucas4665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
aiohttp = "^3.9.5"

[tool.poetry.scripts]
test = "tests.test:test"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
